third_party/move/move-compiler-v2/tests/more-v1/expansion/restricted_address_names.exp

Diagnostics:
error: invalid use of reserved name
  ┌─ tests/more-v1/expansion/restricted_address_names.move:1:8
  │
1 │ module Self::A {}
  │        ^^^^ Invalid address name 'Self'. 'Self' is restricted and cannot be used to name an address

error: invalid use of reserved name
  ┌─ tests/more-v1/expansion/restricted_address_names.move:2:8
  │
2 │ module vector::A {}
  │        ^^^^^^ Invalid address name 'vector'. 'vector' is restricted and cannot be used to name an address
